[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "karios"
dynamic = ["version"]
description = "KLT Algorithm for Registration of Images from Observing Systems"
readme = "README.md"
authors = [
    {name = "Telespazio France", email = "sen2like@telespazio.com"}
]
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    # All dependencies are managed via conda environment
    # See environment.yml for the complete dependency list
]

[project.urls]
Homepage = "https://github.com/telespazio-tim/karios"

[project.scripts]
karios = "karios.cli.commands:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# This will automatically find all packages

[tool.setuptools.package-data]
"karios.configuration" = ["processing_configuration.json"]

[tool.setuptools.dynamic]
version = {attr = "karios.version.__version__"}
